--- a/app/styles/components/gloss-notification.scss
+++ b/app/styles/components/gloss-notification.scss
@@ -1,15 +1,41 @@
 .Gloss-notifier {
-  width: 24rem;
   display: flex;
   flex-direction: column-reverse;
   align-items: stretch !important;
+
+  p {
+    padding: 0 1rem;
+
+    @media screen and (max-width: 375px) {
+      padding: 0;
+    }
+  }
 }
 
 .Gloss-notification {
+  margin-top: 0.5rem;
   cursor: pointer;
-  background: linear-gradient(transparent, rgba($secondary, 0.1), rgba($secondary, 0.2));
-  margin-bottom: 1rem;
   padding: 1rem;
+  color: $secondary;
+  font-weight: 400;
+  border: 1px solid transparent;
+  transition: border-color 250ms linear;
+
+  &--time {
+    font-size: 0.7rem;
+    display: block;
+    line-height: 2;
+  }
+
+  &--flex {
+    display: flex;
+    align-items: center;
+  }
+
+  &--image {
+    border-radius: 5rem;
+    margin-right: 1rem;
+  }
 
   &--line {
     &:nth-child(2) {
@@ -21,10 +47,8 @@
     }
   }
 
-  &--time,
-  &--subjectContext,
-  &--messageContext {
-    color: $secondary;
-    font-weight: 800;
+  &:hover {
+    background: linear-gradient(transparent, rgba($secondary, 0.1), rgba($secondary, 0.2));
+    border-color: $primary;
   }
 }
