--- a/app/templates/authorize.hbs
+++ b/app/templates/authorize.hbs
@@ -1,7 +1,7 @@
 <div class="Gloss-module Gloss-module--x">
   <div class="Gloss-module Gloss-module--y Gloss-hud">
     <div class="Gloss-module">
-      <a class="Gloss-button" href="http://gloss/api/auth/authorize">Authorize</a>
+      <a class="Gloss-button" href="http://gloss.space/api/auth/authorize">Authorize</a>
     </div>
   </div>
 </div>
