--- a/app/styles/components/gloss-notification.scss
+++ b/app/styles/components/gloss-notification.scss
@@ -51,4 +51,8 @@
     background: linear-gradient(transparent, rgba($secondary, 0.1), rgba($secondary, 0.2));
     border-color: $primary;
   }
+
+  @media screen and (max-width: 1024px) {
+    padding: 0.5rem;
+  }
 }
