--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -1,13 +1,15 @@
 .Gloss-message {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: -1;
+  background: rgba(0,0,0,0.0);
 
   &--shown {
     z-index: 1000;
+    background: rgba(0,0,0,0.3);
   }
 
   h2, h3 {
