--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,7 +3,7 @@
 
 body {
   background: url(/assets/bg.jpg) center center no-repeat fixed #000;
-  background-size: cover;
+  background-size: auto 80%;
   color: $primary;
   font-family: 'Titillium Web', 'EVE Sans', sans-serif;
   letter-spacing: 1.4px;
@@ -21,14 +21,35 @@ p {
 }
 
 .Gloss {
-  height: 96vh;
-  padding: 2vh;
+  height: 98vh;
+  width: 98vw;
+  padding: 1vh 1vw;
+}
+
+.Gloss-hud {
+  height: 98vh;
+  width: 98vw;
+  align-items: center;
+
+  .Gloss-analysis {
+    height: 82vh;
+    overflow-y: auto;
+  }
+
+  .Gloss-report {
+    padding-top: 2vh;
+    max-height: 80vh;
+    overflow-y: auto;
+
+    white-space: nowrap;
+
+    overflow-x: hidden;
+  }
 }
 
 .Gloss-viewport {
-  width: 85%;
-  flex: 4.5;
-  overflow: hidden;
+  width: 98vw;
+  height: 78vh;
 
   .Gloss-shard h2,
   .Gloss-shard h5,
@@ -38,14 +59,6 @@ p {
     @media screen and (max-width: 375px) {
       padding: 0;
     }
-  }
-
-  .Gloss-module {
-    min-width: 360px;
-  }
-
-  @media screen and (max-width: 1024px) {
-    width: 90%;
   }
 }
 
@@ -61,6 +74,16 @@ p {
 
   &--y {
     flex-direction: column;
+  }
+}
+
+.Gloss-threats {
+  max-height: 62vh;
+  overflow-y: auto;
+  width: calc(100vw - 300px);
+
+  .Gloss-notification {
+    flex: 1;
   }
 }
 
@@ -107,27 +130,12 @@ p {
   }
 }
 
-.Gloss-hud {
-  height: 96vh;
-  width: 100%;
-  align-items: center;
-
-  > :first-child,
-  > :last-child {
-    max-width: 70%;
-
-    @media screen and (max-width: 1024px) {
-      max-width: 100%;
-    }
-  }
-}
-
 .Gloss-logo {
   font-weight: 300;
   font-size: 3.75rem;
   font-family: 'Titillium Web', sans-serif;
   letter-spacing: 0.7rem;
-  margin: 0 0 7.5rem 0;
+  margin: 0 0 20vh 0;
   height: 5.6875rem;
 }
 
