--- a/app/styles/objects/_button.scss
+++ b/app/styles/objects/_button.scss
@@ -6,6 +6,8 @@
   text-transform: uppercase;
   border-left: 0.5px solid rgba($secondary, 0.1);
   border-right: 0.5px solid rgba($secondary, 0.1);
+  border-top: none;
+  border-bottom: none;
   padding: 1.5rem 2rem;
   cursor: pointer;
   font-size: 1.5rem;
@@ -13,6 +15,7 @@
   position: relative;
   animation: typing 250ms ease-in;
   transition: color 250ms ease-in;
+  outline: none;
 
   &:hover {
     color: rgba($primary, 1);
@@ -21,6 +24,10 @@
     &:after {
       background-color: rgba($primary, 1);
     }
+  }
+
+  &:focus {
+    outline: none;
   }
 
   &:after {
@@ -35,5 +42,10 @@
     animation: expand 350ms ease-in;
     margin-top: 2rem;
     transition: background-color 375ms;
+  }
+
+  &--small {
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
   }
 }
