--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -5,18 +5,18 @@
     }}
 
   <div class="Gloss-viewport">
-    {{#liquid-if loadUiElements class="ui-fade-9"}}
+    {{#liquid-if loadUiElements class="ui-fade"}}
       <div class="Gloss-module Gloss-module--x Gloss-flex--wrap Gloss-flex--start">
 
         <div class="Gloss-module Gloss-module--y Gloss-flex--start Gloss-flex--3 Gloss-analysis">
 
           <div class="Gloss-module Gloss-module--x Gloss-flex--end">
-            {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small Gloss-flex--1'}}Local{{/link-to}}
+            {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small'}}Local{{/link-to}}
 
-            {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small Gloss-flex--1'}}Tracker{{/link-to}}
-          </div> 
+            {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Tracker{{/link-to}}
+          </div>
 
-          {{outlet}}
+          {{outlet class="ui-fade"}}
 
         </div>
 
@@ -27,18 +27,18 @@
                 {{#each (sort-by 'time:desc' kills) as |notification|}}
                   {{gloss-notification
                     model=notification}}
-                {{else}}
-                  <p>No conflict reported in system.</p>
                 {{/each}}
               {{/liquid-if}}
             </div>
           </div>
         </div>
       </div>
+    {{else}}
+      <p>Loading...</p>
     {{/liquid-if}}
   </div>
 
-  <div class="Gloss-module Gloss-module--x Gloss-flex--end">
+  <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
     {{gloss-shard
       label=character.name
       loaded=loadUiElements
