--- a/app/templates/navigate/index.hbs
+++ b/app/templates/navigate/index.hbs
@@ -1,9 +1,14 @@
-{{#liquid-if selectedFleet class="ui-fade width-100" shrinkDelay=5000}}
-  <a class="Gloss-button Gloss-button--small Gloss-flex--1" {{action 'clearThreat' this}}>Close Report</a>
+{{#liquid-if detailMode class="ui-fade width-100"}}
 
-  <div class="Gloss-module Gloss-report Gloss-module--x Gloss-flex--start Gloss--flex-3">
+  <div class="Gloss-module Gloss-report Gloss-module--y Gloss-flex--start Gloss--flex-3">
 
-    <div class="Gloss-module Gloss-module--x Gloss-report--composition">
+    <div class="Gloss-module Gloss-module--x Gloss-report--composition Gloss-flex--wrap Gloss-flex--start">
+
+      <h3 class="m0 mt2 mr1">{{selectedFaction.name}}</h3>
+
+      <a class="Gloss-button Gloss-button--mini Gloss-button--frameless mt2 mr1" {{action 'clearThreat' this}}>Track Fleet</a>
+      <a class="Gloss-button Gloss-button--mini Gloss-button--frameless mt2" {{action 'clearThreat' this}}>Close Report</a>
+
       <table cellpadding="10">
         <thead>
           <th>Threat</th>
@@ -25,11 +30,12 @@
                 {{character.ship.name}}
               </td>
               <td>{{character.corporation.name}}</td>
-              <td>{{character.alliance.name}}</td>
+              <td>{{if character.alliance character.alliance.name 'None'}}</td>
             </tr>
           {{/each}}
         </tbody>
       </table>
+
     </div>
 
   </div>
@@ -46,7 +52,7 @@
               selectThreat=(action 'selectThreat')
               }}
           {{else}}
-            <p>No active threats in this solar system.<br><br></p>
+            <p class="mt2">No active threats in this solar system.<br><br></p>
           {{/each}}
         </div>
       {{/if}}
