--- a/app/templates/navigate/tracker.hbs
+++ b/app/templates/navigate/tracker.hbs
@@ -1,1 +1,64 @@
-<p class="mt2">You aren't tracking any fleets yet.</p>
+{{#liquid-if detailMode class="ui-fade width-100"}}
+
+  <div class="Gloss-module Gloss-report Gloss-module--y Gloss-flex--start Gloss--flex-3">
+
+    <div class="Gloss-module Gloss-module--x Gloss-report--composition Gloss-flex--wrap Gloss-flex--start">
+
+      <h3 class="m0 mt2 mr1">{{selectedFaction.name}}</h3>
+
+      <a class="Gloss-button Gloss-button--mini Gloss-button--frameless mt2 mr1" {{action 'untrackThreat' this}}>Untrack Fleet</a>
+      <a class="Gloss-button Gloss-button--mini Gloss-button--frameless mt2" {{action 'clearThreat' this}}>Close Report</a>
+
+      <table cellpadding="10">
+        <thead>
+          <th>Threat</th>
+          <th>Pilot</th>
+          <th>Ship</th>
+          <th>Corporation</th>
+          <th>Alliance</th>
+        </thead>
+
+        <tbody>
+          {{#each (sort-by 'dangerRatio:desc' selectedFleet.characters) as |character|}}
+            <tr class="Gloss-report--character">
+              <td>{{#if (eq character.dangerRatio 0)}}N/A{{else}}{{character.dangerRatio}}%{{/if}}</td>
+              <td><a href="{{zkill-character character}}" target="_blank">{{character.name}}</a></td>
+              <td class="Gloss-report--ship">
+                {{#if character.ship}}
+                  <img src="https://imageserver.eveonline.com/Type/{{character.ship.id}}_32.png" />
+                {{/if}}
+                {{character.ship.name}}
+              </td>
+              <td>{{character.corporation.name}}</td>
+              <td>{{if character.alliance character.alliance.name 'None'}}</td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+
+    </div>
+
+  </div>
+
+{{else}}
+
+  <div class="Gloss-module Gloss-module--x Gloss-threats Gloss-flex--start">
+    <div class="Gloss-module">
+      <div class="Gloss-module Gloss-module--x Gloss-flex--wrap">
+        {{#each (sort-by 'dangerRatio:desc' fleets) as |fleet|}}
+          {{gloss-threat
+            model=fleet
+            selectThreat=(action 'selectThreat')
+            }}
+        {{else}}
+          <p class="mt2">You aren't tracking any fleets yet.</p>
+        {{/each}}
+      </div>
+    </div>
+  </div>
+
+  {{#if fleets}}
+    <p>Select a fleet above to view detailed analysis.</p>
+  {{/if}}
+
+{{/liquid-if}}
