--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,4 +7,5 @@
   subheader=messageSubheader
   isShowingMessage=isShowingMessage
   stopAnimating=stopAnimating
+  shouldNotOverlay=shouldNotOverlay
   }}
