--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -139,7 +139,7 @@ p {
   font-size: 3.75rem;
   font-family: 'Titillium Web', sans-serif;
   letter-spacing: 0.7rem;
-  margin: 0 0 10vh 0;
+  margin: 0 0 7rem 0;
   height: 5.6875rem;
 }
 
