--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -1,20 +1,27 @@
 .Gloss-message {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: -1;
-  background: rgba(0,0,0,0.0);
+  background-color: rgba(0,0,0,0.0);
+
+  transition: 500ms background-color ease-in-out;
 
   &--shown {
-    z-index: 1000;
-    background: rgba(0,0,0,0.3);
+    z-index: 50;
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  &--underlay {
+    background-color: rgba(0,0,0,0.0);
   }
 
   h2, h3 {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
+    text-align: center;
     font-family: 'EVE Sans', sans-serif;
   }
 
