tracking, ui, connection handling, etc

--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -21,7 +21,7 @@
   h2, h3 {
     margin: 0;
     padding: 0;
-    text-align: center;
+    text-align: right;
     font-family: 'EVE Sans', sans-serif;
   }
 
