--- a/app/styles/objects/_button.scss
+++ b/app/styles/objects/_button.scss
@@ -24,7 +24,7 @@
     &:after {
       left: 0;
       right: 0;
-      animation: expand 350ms ease-in;
+      animation: expand 175ms linear;
     }
   }
 
