--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -2,6 +2,7 @@
   {{gloss-stats
     system=system
     loadUiElements=loadUiElements
+    isConnected=isConnected
     }}
 
   <div class="Gloss-viewport">
